--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
         id="com.glanzkinder.seem" version="1.0.1">
     <name>SEEM-Manager SDK</name>
     <description>Cordova/PhoneGap Plugin for SEEM-Manger</description>
-    <license>TODO</license>
+    <license>New BSD License</license>
     <keywords>cordova, phonegap, beacons, iBeacons, SEEM, SEEM-Manager</keywords>
     <repo>https://github.com/glanzkinder/SEEM-Beacon-Manager-Cordova-SDK.git</repo>
     <issue>https://github.com/glanzkinder/SEEM-Beacon-Manager-Cordova-SDK/issues</issue>
